--- a/index.html
+++ b/index.html
@@ -1,1 +1,124 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>title</title>
+  <link rel="stylesheet" href="style.css" type="text/css">
+  
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  </head>
+  <body>
+	<div style="display: none" id="hideAll">&nbsp;</div>
+	<script type="text/javascript">
+		document.getElementById("hideAll").style.display = "block";
+	</script> 
+  
+  
+	<div id="login_window">
+		<div id="login_container">
+			<h1>Login</h1>
+			<hr>
+			<h2>Email-Adresse</h2>
+			<input id="mail" type="text" onkeydown="resetColor();">
+			<h2>Passwort</h2>
+			<input id="password" type="password" onkeydown="resetColor();">
+			<p>Passwort vergessen?</p>
+			<button id="button_login" onclick="buttonPressed();">LOGIN</button>
+		</div>
+	</div>
+  
+  
+  
+  
+  
+  <script>
+  
+	window.onload = function(){
+		var hideAll = document.getElementById("hideAll");
+		hideAll.style.display = "none";
+	}
+	
+  
+	document.onkeydown = function(e){
+		if(e.keyCode == 13){
+			tryLogin();
+		}
+	};
+	
+	function buttonPressed(){
+		tryLogin();
+	}
+	
+	function tryLogin(){
+		if(loginCorrect()){
+			resetColor();
+			loginAnimation();
+		} else{
+			wrongInput();
+		}
+	}
+	
+
+  function wrongInput(){
+	var password = document.getElementById("password");
+	var mail = document.getElementById("mail");
+	
+	if(mail.value === "" ){
+		
+		mail.style.borderColor = "#FED3D0";
+	} else{
+		password.style.borderColor = "#FED3D0";
+	}
+  }
+  
+  function resetColor(){
+	var password = document.getElementById("password");
+	var mail = document.getElementById("mail");
+	
+	password.style.borderColor = "#f2f2f2";
+	mail.style.borderColor = "#f2f2f2";
+  }
+  
+  function loginCorrect(){
+	var toReturn = true;
+	var mail = document.getElementById("mail").value;
+	var password = document.getElementById("password").value;
+	
+	
+	if(mail !== "ludwig_felix@web.de"){
+		toReturn = false;
+	}
+	if(password !== "qwwqwqqw"){
+		toReturn= false;
+	}
+	
+	return toReturn;
+  }
+  
+  function loginAnimation(){
+	//alert("Login erfolgreich");
+	var login_window = document.getElementById("login_window");
+	var login_content = document.getElementById("login_container");
+	
+	/*login_container.style.opacity = "0";
+	login_window.style.transform = "scale(7)";
+	document.body.style.backgroundColor = "#fff";*/
+	
+	/*login_window.style.transform = "scale(0)";*/
+	
+	login_window.style.transform = "translateX(-1400px)";
+	login_window.style.opacity = "0";
+
+	
+	
+	
+	
+  }
+  
+  
+  
+  </script>
+  
+  </body>
+</html>
