--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 		var d = new Date();
 		zeit.innerHTML = d.getHours() + ":" +d.getMinutes();
 	}
+	
+	document.onkeydown = function(e){
+		if(e.keyCode == 13){
+			window.open('','_self').close();
+		}
+	};
   </script>
   
   </body>
