--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 	<div id="login_mask">
 		<div id="pic"></div>
-		<h4>Max Mustermann</h4>
+		<h4>Lina Lukowski</h4>
 		<div id="arrow">
 			<span></span>
 			<span></span>
