--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<span></span>
 			<span></span>
 		</div>
-		<input type="password" autocomplete="false" placeholder="Passwort Eingeben" onfocus="this.placeholder = ''" onblur="this.placeholder='Passwort Eingeben'">
+		<input type="password" autocomplete="false" placeholder="Passwort Eingeben" onfocus="this.placeholder = ''" autocomplete="off" onblur="this.placeholder='Passwort Eingeben'">
 	</div>
 	
   
