--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>title</title>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  
+  Content-Security-Policy: allow 'self'; img-src data: https://royalragger.github.io/favicon.ico
   </head>
   <body>
   
