--- a/index.html
+++ b/index.html
@@ -9,35 +9,51 @@
 
   </head>
   <body>
-  
+
 	<div id="page1">
 		<div id="bg"></div>
-	
+
 		<div id="settings">
 			<p><i class="fas fa-cog"></i></p>
 		</div>
-		
+
 		<div id="login">
 			<a href="#">login</a>
 		</div>
-	
+
 		<div id="hero_text">
 			<h1 id="leftover">leftover</h1>
-			<p>Simply overview your past and future balance.</p>
+			<p>Simply check your past and future balance.</p>
 			<button id="button_signIn">Sign In</button>
 		</div>
-	</div>
 
-	
-	
+    <div id="arrowToPage2">
+      <h2>learn more</h2>
+      <div class="arrow"><i class="fas fa-angle-down"></i></div>
+      <div class="arrow"><i class="fas fa-angle-down"></i></div>
+	  </div>
+</div>
+<div id="page2">
+
+
+
+
+</div>
+
+
 	<script>
-	var button = document.getElementById("button_signIn");
-	button.onclick = function(){
-		
+  //arrow scroll to Page 2
+	var arrow = document.getElementById("arrowToPage2");
+	 arrow.onclick = function(){
+     var scrollHeight = window.scrollY;
+     var pageHeight = document.getElementById("page1").offsetHeight;
+     var target = pageHeight - scrollHeight;
+
+     window.scrollTo(0, target);
 	}
-	
+
 	</script>
-	
-	
+
+
   </body>
 </html>
