änderungen für senden.php

--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
 <body>
 
 
+  <form method="post" action="senden.php">
+    <p>
+      Mail eingeben
+    </p>
+    <input type="text" name="mail" />
+    <button type="submit">submit</button>
+  </form>
+
+
 </body>
 </html>
