--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
    			<div class="about-profile-bg"></div>
 
 				<div class="intro">
-					<h3 class="animate-this">Über uns</h3>
-	   			<p class="lead animate-this"><span>SkyDance</span> ist ein DJ-Team und Veranstaltungsplaner aus Steinfurt. Wir liefern alles für Ihr Event - aus einer Hand. </p>
+					<h3 class="">Über uns</h3>
+	   			<p class="lead "><span>SkyDance</span> ist ein DJ-Team und Veranstaltungsplaner aus Steinfurt. Wir liefern alles für Ihr Event - aus einer Hand. </p>
 				</div>
 
    		</div> <!-- end col-full  -->
@@ -248,7 +248,7 @@
    			<div id="folio-wrap" class="bricks-wrapper">
 
    				<div class="brick folio-item">
-	               <div class="item-wrap animate-this" data-src="images/portfolio2/gallery/1g.jpg" data-sub-html="#01" >
+	               <div class="item-wrap animate-this" data-src="images/portfolio2/gallery/1k.jpg" data-sub-html="#01" >
 	                  <a href="#" class="overlay">
 	                  	<img src="images/portfolio2/1k.jpg" alt="Skaterboy">
 	                     <div class="item-text">
@@ -270,7 +270,7 @@
 	        		</div> <!-- end folio-item -->
 
 	        		<div class="brick folio-item">
-	               <div class="item-wrap animate-this" data-src="images/portfolio2/gallery/2g.jpg" data-sub-html="#02">
+	               <div class="item-wrap animate-this" data-src="images/portfolio2/gallery/2k.jpg" data-sub-html="#02">
 	                  <a href="#" class="overlay">
 	                  	<img src="images/portfolio2/2k.jpg" alt="Shutterbug">
 	                     <div class="item-text">
@@ -292,7 +292,7 @@
 	        		</div> <!-- end folio-item -->
 
 	        		<div class="brick folio-item">
-	               <div class="item-wrap animate-this" data-src="images/portfolio2/gallery/4g.jpg" data-sub-html="#03" >
+	               <div class="item-wrap animate-this" data-src="images/portfolio2/gallery/4k.jpg" data-sub-html="#03" >
 	                  <a href="#" class="overlay">
 	                  	<img src="images/portfolio2/4k.jpg" alt="Explore">
 	                     <div class="item-text">
@@ -314,7 +314,7 @@
 	        		</div> <!-- end folio-item -->
 
 					<div class="brick folio-item">
-	               <div class="item-wrap animate-this"  data-src="images/portfolio2/gallery/3g.jpg"  data-sub-html="#04" >
+	               <div class="item-wrap animate-this"  data-src="images/portfolio2/gallery/3k.jpg"  data-sub-html="#04" >
 	                  <a href="#" class="overlay">
 	                  	<img src="images/portfolio2/3k.jpg" alt="Minimalismo">
 	                     <div class="item-text">
@@ -358,7 +358,7 @@
 	        		</div> <!-- end folio-item -->
 
 					<div class="brick folio-item">
-	               <div class="item-wrap animate-this"  data-src="images/portfolio2/gallery/5g.jpg"  data-sub-html="#06">
+	               <div class="item-wrap animate-this"  data-src="images/portfolio2/gallery/5k.jpg"  data-sub-html="#06">
 	                  <a href="#" class="overlay">
 	                  	<img src="images/portfolio2/5k.jpg" alt="Salad">
 	                     <div class="item-text">
@@ -551,9 +551,9 @@
 
 	   		<div class="cinfo">
 	   			<h6>Mailen Sie uns</h6>
-	   			<p>
+	   			<a href="mailto:m.mustermann.de" style="color: #fff; text-decoration: none">
 	   				info@skydance-dj.de
-				   </p>
+          </a>
 	   		</div> <!-- end cinfo -->
 
 	   		<div class="cinfo">
