--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 		   	<div class="row">
 		   		<div class="col-twelve">
 
-			  				<h3 class="animate-intro">Wir geben Gas</h3>
+			  				<h3 class="animate-intro">Wir geben richtig Gas</h3>
 				  			<h1 class="animate-intro">
-							Skydance DJ-Team <br>
+							Skydance DJ-Team.<br>
 							Alles für Ihr Event.
 				  			</h1>
 
