Portfolio hat padding-bottom. Footer aufgeräumt halbwegs. Testimonials entfernt.

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 						</div>
 	        		</div> <!-- end folio-item -->
 
-					<div class="brick folio-item">
+					<div class="brick folio-item" stlye="margin-bottom: 400px">
 	               <div class="item-wrap animate-this"  data-src="images/portfolio2/gallery/6g.jpg"  data-sub-html="#05" >
 	                  <a href="#" class="overlay">
 	                  	<img src="images/portfolio2/6k.jpg" alt="Bicycle">
@@ -385,62 +385,6 @@
 
    </section>  <!-- end portfolio -->
 
-
-   <!-- Testimonials Section
-   ================================================== -->
-   <section id="testimonials">
-
-   	<div class="row">
-   		<div class="col-twelve">
-   			<h2 class="animate-this">Was man über uns sagt.</h2>
-   		</div>
-   	</div>
-
-      <div class="row flex-container">
-
-         <div id="testimonial-slider" class="flex-slider animate-this">
-
-            <ul class="slides">
-
-               <li>
-                  <p>
-                  Krasser Shit was die abgeliefert haben, das werde ich so schnell nicht vergessen. War eine tolle Musikauswahl und schöne Lichteffekte. War insgesamt eine gelungene Beerdigung.
-                  </p>
-
-                  <div class="testimonial-author">
-                    	<img src="images/avatars/user-06.jpg" alt="Author image">
-                    	<div class="author-info">
-                    		Steve Jobs
-                    		<span class="position">CEO, Apple.</span>
-                    	</div>
-                  </div>
-             	</li> <!-- end slide -->
-
-               <li>
-                  <p>
-                  Hatte einen schönen Geburtstag mit SkyDance. Ich mag schlechte Musik wie Schlager und so. Der DJ kannte sich mit dieser Art von schlechter Musik extrem gut aus. Ich bin entzückt.
-                  </p>
-
-               	<div class="testimonial-author">
-                    	<img src="images/avatars/user-03.jpg" alt="Author image">
-                    	<div class="author-info">
-                    		Maximilian Petersen
-                    		<span>Gast</span>
-                    	</div>
-                  </div>
-               </li> <!-- end slide -->
-
-            </ul> <!-- end slides -->
-
-         </div> <!-- end testimonial-slider -->
-
-      </div> <!-- end flex-container -->
-
-   </section> <!-- end testimonials -->
-
-
-	<!-- stats
-   ================================================== -->
   <!-- <section id="clients">
 
 		<div class="row animate-this">
@@ -583,7 +527,9 @@
 
 	            <h4 class="h05">skydance.</h4>
 
-	            <p>Marvin, hier könnte deine Nachricht stehen.</p>
+              <ul class="list-links">
+                <p>Marvin, hier könnte deine Werbung stehen.</p>
+  					</ul>
 
 		      </div> <!-- end footer-about -->
 
@@ -600,24 +546,12 @@
 
 	      	<div class="col-four tab-full footer-subscribe end">
 
-	      		<h4 class="h05">Newsletter.</h4>
+	      		<h4 class="h05">Geschwafel.</h4>
 
-	      		<p>Abonnieren Sie unseren kostenlosen Newsletter mit aktuellen Informationen.</p>
+            <ul class="list-links">
+              <li><a href="#" target="">Impressum</a></li>
+          </ul>
 
-	      		<div class="subscribe-form">
-
-	      			<form id="mc-form" class="group" novalidate="true">
-
-							<input type="email" value="" name="dEmail" class="email" id="mc-email" placeholder="email eingeben" required="">
-
-			   			<!-- <input type="submit" name="subscribe" > -->
-			   			<button><i class="icon-mail"></i></button>
-
-		   				<label for="mc-email" class="subscribe-message"></label>
-
-						</form>
-
-	      		</div>
 
 	      	</div> <!-- end footer-subscribe -->
 
@@ -631,7 +565,7 @@
 
       		<div class="col-twelve">
 	      		<div class="copyright">
-		         	<span>© Copyright SkyDance 2017.</span>
+		         	<span>© Copyright SkyDance 2018.</span>
 		         	<!--<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span> -->
 		         </div>
 	      	</div>
